--- a/static/templates/domain.html
+++ b/static/templates/domain.html
@@ -1,6 +1,6 @@
 <dl class="dl-horizontal">
   <dt>Domain:</dt>
-  <dd>{[ domain.name ]}</dd>
+  <dd><a href="#" ui-sref="domain.aggregatelist({domId: domain.id})">{[ domain.name ]}</a></dd>
 </dl>
 
 <div ui-view></div>
