--- a/static/templates/graph.html
+++ b/static/templates/graph.html
@@ -44,12 +44,12 @@
   </button>
   <dl class="dl-horizontal">
     <dt>Start:</dt>
-    <dd>{[ graphState.start | date:'medium' ]}
-      <span ng-show="graphState.start < graphState.data_start">(data starts {[ graphState.data_start | date:'medium' ]})</span>
+    <dd>{[ graphState.start | i18ndate ]}
+      <span ng-show="graphState.start < graphState.data_start">(data starts {[ graphState.data_start | i18ndate ]})</span>
     </dd>
     <dt>End:</dt>
-    <dd>{[ graphState.end   | date:'medium' ]}
-      <span ng-show="graphState.end   > graphState.data_end"  >(data ends {[ graphState.data_end   | date:'medium' ]})
+    <dd>{[ graphState.end   | i18ndate ]}
+      <span ng-show="graphState.end   > graphState.data_end"  >(data ends {[ graphState.data_end   | i18ndate ]})
     </dd>
     <dt>Query time:</dt>
     <dd>{[ graphState.query_time | number:2 ]} seconds</dd>
