--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load l10n %}
 <!DOCTYPE html>
 <html ng-app="FluxmonApp">
   <head>
@@ -21,6 +22,7 @@
     <script type="text/javascript" src="/static/bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script type="text/javascript" src="/static/bower_components/angular-gravatar/build/angular-gravatar.js"></script>
     <script type="text/javascript" src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/jsi18n/"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
     <script type="text/javascript" src="/static/scripts/IndexCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/ProfileCtrl.js"></script>
