outsource the i18ndate filter into its own file

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="/static/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/jsi18n/"></script>
     <script type="text/javascript" src="/static/ng.app.js"></script>
+    <script type="text/javascript" src="/static/scripts/i18ndate.js"></script>
     <script type="text/javascript" src="/static/scripts/IndexCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/ProfileCtrl.js"></script>
     <script type="text/javascript" src="/static/scripts/SearchCtrl.js"></script>
