--- a/templates/index.html
+++ b/templates/index.html
@@ -97,7 +97,7 @@
     <p>Development is still under way, so unfortunately, there is not much to be seen here yet.</p>
     <p>Contact Svedrin in the Freenode IRC network if you'd like to get in touch.</p>
     <p>There's a <a href="https://trello.com/b/y9slyrds/fluxmon" target="_blank">Trello board</a> where I keep track of ideas and a
-      <a href="https://bitbucket.org/Svedrin/fluxmon-sensors/" target="_blank">repository</a> full of sensors I use to collect data.</p>
+      <a href="https://bitbucket.org/Svedrin/fluxd/" target="_blank">repository</a> containing the data collector.</p>
     <p>Also, check out <a href="http://blog.svedr.in/posts/why-i-started-working-on-fluxmon.html">my blog post on what I'm doing here</a>.</p>
   </div>
 </div>
