--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html ng-app="FluxmonApp">
   <head>
-    <title>{% block title %}Fluxmon{% endblock %}</title>
+    <title ng-bind="title">Fluxmon</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport"     content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <link rel='stylesheet'    href='https://fonts.googleapis.com/css?family=PT+Sans' type='text/css'>
