--- a/static/templates/domain-aggregatelist.html
+++ b/static/templates/domain-aggregatelist.html
@@ -1,3 +1,19 @@
+<div class="panel panel-default">
+  <div class="panel-body">
+    <table class="table table-hover">
+      <tbody>
+        <tr class="checktr"
+            ng-repeat="view in domain.views_set"
+            ui-sref="domain.view({name: view.name})">
+          <td>
+            {[ view.name ]}
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
 <table class="table table-hover">
   <thead>
     <tr>
