--- a/templates/base.html
+++ b/templates/base.html
@@ -47,14 +47,14 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#" ui-sref="index">Home</a></li>
+            <li data-toggle="collapse" data-target=".in"><a href="#" ui-sref="index">Home</a></li>
             {% if not user.is_anonymous %}
-            <li><a href="#" ui-sref="profile">{{ user }}</a></li>
-            <li><a href="#" ui-sref="tree">Hosts</a></li>
-            <li><a href="#" ui-sref="search" searchbox>Search</a></li>
-            <li><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
+            <li data-toggle="collapse" data-target=".in"><a href="#" ui-sref="profile">{{ user }}</a></li>
+            <li data-toggle="collapse" data-target=".in"><a href="#" ui-sref="tree">Hosts</a></li>
+            <li data-toggle="collapse" data-target=".in"><a href="#" ui-sref="search" searchbox>Search</a></li>
+            <li data-toggle="collapse" data-target=".in"><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
             {% else %}
-            <li><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
+            <li data-toggle="collapse" data-target=".in"><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
             {% endif %}
           </ul>
         </div><!--/.nav-collapse -->
