fix wrong copypasta

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 {% load i18n %}
 
-{% block title %}{{ title }} | {% trans 'HG admin' %}{% endblock %}
+{% block title %}{{ title }} | {% trans 'Fluxmon admin' %}{% endblock %}
 
 {% block extrahead %}
 <style type="text/css">
