add updated_at field to checks

--- a/static/templates/node-check.html
+++ b/static/templates/node-check.html
@@ -23,7 +23,7 @@
     </ul>
   </dd>
   <dt>Last update:</dt>
-  <dd>{[ check.last_update ]}</dd>
+  <dd>{[ check.updated_at | i18ndate ]}</dd>
 </dl>
 
 <dl class="dl-horizontal" ng-hide="showDetails">
