--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
             {% if not user.is_anonymous %}
             <li data-toggle="collapse" data-target=".in"><a href="#" ui-sref="profile">{{ user }}</a></li>
             <li data-toggle="collapse" data-target=".in"><a href="#" ui-sref="tree">Hosts</a></li>
-            <li data-toggle="collapse" data-target=".in"><a href="#" ui-sref="search" searchbox>Search</a></li>
+            <li><a href="#" ui-sref="search" searchbox>Search</a></li>
             <li data-toggle="collapse" data-target=".in"><a href="{% url 'django.contrib.auth.views.logout' %}">Logout</a></li>
             {% else %}
             <li data-toggle="collapse" data-target=".in"><a href="{% url 'django.contrib.auth.views.login' %}">Login</a></li>
