only return objects that have been updated in the last hour in the tree; add last_update field that denotes the interval since the last update; display outdated label on hosts that haven't been updated in the last ten minutes

--- a/static/templates/domain-tree.html
+++ b/static/templates/domain-tree.html
@@ -8,6 +8,7 @@
     <ol>
         <li ng-repeat="host in node.hosts">
             <a href="#" ui-sref="node.checklist({nodeId: host.id})">{[ host.fqdn ]}</a>
+            <span ng-show="host.last_update > 600">outdated</span>
         </li>
     </ol>
   </ol>
